# workforce-os

./: README.md  crypto_reference.py  init_aggregation.sql  init_state.sql  init_state_v1_1.sql  init_telemetry.sql  main.tf  terraform.tfstate  terraform.tfstate.backup  tfplan
.github/workflows/: ingress_pipeline.yml
agents/macos/: telemetry_agent.py
backend/api/: openapi.yaml
backend/app/: main.py
backend/terraform/: main.tf
darwin_agent/: Cargo.toml  workforce-os-mdm.mobileconfig
darwin_agent/src/: main.rs
dashboard/: package-lock.json  package.json
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/about/: page.tsx
dashboard/src/app/docs/: page.tsx
dashboard/src/app/endpoints/: page.tsx
dashboard/src/lib/: charts.ts  clickhouse.ts  metrics.ts
intelligence-enclave/: go.mod  go.sum  main.go
intelligence-enclave/enclave/: decrypt.go
intelligence-enclave/engine/: heuristics.go
intelligence-enclave/sink/: clickhouse.go
intelligence-enclave/stream/: consumer.go
schemas/: telemetry_ingress_v1.json  telemetry_ingress_v1_1.json
tests/: memory_audit.py  network_partition.sh
workforce-agent-darwin/: Cargo.toml
workforce-agent-darwin/src/: accessibility.rs  context.rs  main.rs
workforce-agent-win32/: Cargo.toml  agent.wxs
workforce-agent-win32/src/: cache.rs  main.rs  service.rs
