[package]
name = "darwin_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"
core-graphics = "0.23"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
lazy_static = "1.4"
