[package]
name = "workforce-agent-win32"
version = "1.0.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
sha2 = "0.10"
aes-gcm = "0.10"
crossbeam-channel = "0.5"
rusqlite = { version = "0.29", features = ["bundled"] }
windows-service = "0.6"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_UI_Accessibility",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
